--- a/Formulário_de_contato/contato.html
+++ b/Formulário_de_contato/contato.html
@@ -9,7 +9,10 @@
 <body>
     <fieldset>
         <legend>Entre em contato</legend>
-        <select name="suporte" id=""></select>
+        <select>
+
+            <option>Suporte</option>
+        </select>
     </fieldset>    
 </body>
 </html>
