Concluido Quiz, Lista de Compras e Formulario de Cadastro

--- a/Formulário_de_contato/contato.html
+++ b/Formulário_de_contato/contato.html
@@ -9,6 +9,32 @@
 <body>
     <fieldset>
         <legend>Entre em contato</legend>
+        <label for="">Assunto:</label>
+        <select name="" id="">
+            <option value="">Suporte</option>
+        </select>
+        <br>
+        <br>
+        <label for="">Nome Completo:</label>
+        <br>
+        <input placeholder="Seu nome" type="text">
+        <br>
+        <br>
+        <label for="">E-mail:</label>
+        <br>
+        <input placeholder="email@seudominio.com" type="email">
+        <br>
+        <br>
+        <label for="">Mensagem:</label>
+        <br>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <br>
+        <br>
+        <input type="checkbox">
+        <label for="">Aceito receber novidades por e-mail</label>
+        <br>
+        <br>
+        <button>Enviar</button>
     </fieldset>    
 </body>
 </html>
