Blog Post Finalizado com Sucesso

--- a/Blog_Post/blog-post.html
+++ b/Blog_Post/blog-post.html
@@ -7,6 +7,27 @@
     <title>Blog Post</title>
 </head>
 <body>
-    
+    <h1>My Blog</h1>
+    <header>
+        <a href="#">Home</a>
+        <a href="#">Sobre</a>
+        <a href="#">Contato</a>
+    </header>
+    <article>
+        <h3>Titulo do Post</h3>
+        <img src="/Desafios_HTML/Blog_Post/images/img.jpg" alt="" width="400">
+        <br>
+        <q>única limitação é você mesmo</q>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati nulla ex minima exercitationem earum repudiandae harum iusto excepturi.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus ducimus labore beatae consectetur debitis nulla iste nam, harum aliquam!</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, dicta natus, eligendi non accusantium voluptas blanditiis obcaecati eos cupiditate ratione aliquid magni.</p>
+    </article>
+    <hr>
+    <aside>
+        <p><b>Data:</b> 28/01/2002</p>
+        <img src="/Desafios_HTML/Blog_Post/images/foto.jpg" alt="" width="200">
+        <p><b>Por:</b> Ylan Silva</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi voluptate a molestias nam quam laborum enim possimus quasi eaque.</p>
+    </aside>
 </body>
 </html>
